2010-05-12  Michael Hutchinson  <mhutchinson@novell.com>

	* WelcomePageView.cs:
	* WelcomePageCommands.cs:
	* WelcomePageOptionPanel.cs: Move settings to a class.

2010-05-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* WelcomePage.csproj:
	* WelcomePageCommands.cs:
	* WelcomePageOptionPanel.cs: Added option for closing welcome
	  page after opening a solution.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* WelcomePageWidget.cs: Delay project service loading -
	  replacing the file format check with a simple extension
	  check.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* WelcomePage.addin.xml: Bumped MD version.

2010-03-18  Lluis Sanchez Gual  <lluis@novell.com>

	* WelcomePageView.cs: Use the new status bar model.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* WelcomePage.csproj:
	* gtk-gui/gui.stetic:
	* WelcomePageView.cs:
	* WelcomePageWidget.cs:
	* WelcomePage.addin.xml:
	* WelcomePageCommands.cs:
	* WelcomePageOptionPanel.cs: Merged MD.Projects into MD.Core,
	  and MD.Projects.Gui, MD.Core.Gui and MD.Components into
	  MD.Ide.

2010-03-08  Lluis Sanchez Gual  <lluis@novell.com>

	* WelcomePageView.cs: Track api changes.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* WelcomePage.csproj: Restore makefile integration.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* WelcomePage.xsl:
	* WelcomePage.css:
	* gtk-gui/gui.stetic:
	* WelcomePageView.cs:
	* WelcomePage.csproj:
	* gtk-gui/objects.xml:
	* WelcomePageWidget.cs:
	* XslGettextCatalog.cs:
	* WelcomePageCommands.cs:
	* WelcomePageFallbackWidget.cs:
	* gtk-gui/MonoDevelop.WelcomePage.WelcomePageWidget.cs:
	* gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs:
	  Remove the dead HTML abstraction.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* md-bg.png:
	* md-logo.png:
	* Makefile.am:
	* mono-bg.png:
	* mono-logo.png:
	* WelcomePage.csproj: